--- a/roles/raspberry-pi-hw-up/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-up/tasks/main.yaml
@@ -19,10 +19,9 @@
   failed_when: false
   lineinfile:
     backrefs: yes
-    #    line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
     line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
     path: '{{ boot_directory }}/{{ item }}'
-    regexp: '^(.*\bconsole=tty1\b).*( root=LABEL\b.*)$'
+    regexp: '^(.*\bconsole=tty1\b).*( root=.*)$'
   notify: reboot system
   with_items:
     - cmdline.txt
