It's recommended to install gnupg-agent before installing Docker.

--- a/roles/debian-up/tasks/main.yaml
+++ b/roles/debian-up/tasks/main.yaml
@@ -40,6 +40,7 @@
       - avahi-daemon
       - ca-certificates
       - curl
+      - gnupg-agent
       - net-tools
       - nfs-common
       - open-iscsi
