--- a/down.yaml
+++ b/down.yaml
@@ -1,9 +1,14 @@
 ---
 - hosts:
-    - k8s_master
     - k8s_worker
   roles:
     - k8s-commons-down
+- hosts:
+    - k8s_master
+  roles:
+    - k8s-master-down
+    - k8s-commons-down
+  run_once: yes
 - hosts: k3s_worker
   roles:
     - k3s-worker-down
