--- a/roles/k8s-commons-up/tasks/main.yaml
+++ b/roles/k8s-commons-up/tasks/main.yaml
@@ -1,38 +1,16 @@
 ---
-- name: use arptables-legacy
-  alternatives:
-    name: arptables
-    path: /usr/sbin/arptables-legacy
-  failed_when: false
-- name: use ebtables-legacy
-  alternatives:
-    name: ebtables
-    path: /usr/sbin/ebtables-legacy
-  failed_when: false
-- name: use iptables-legacy
-  alternatives:
-    name: iptables
-    path: /usr/sbin/iptables-legacy
-  failed_when: false
-- name: use ip6tables-legacy
-  alternatives:
-    name: ip6tables
-    path: /usr/sbin/ip6tables-legacy
-  failed_when: false
 - name: add apt-key for k8s
   apt_key:
     id: 6A030B21BA07F4FB
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
 - name: add apt-repository for k8s
-  copy:
-    content: "deb https://apt.kubernetes.io/ kubernetes-xenial main\n"
-    dest: /etc/apt/sources.list.d/kubernetes.list
+  apt_repository:
+    repo: "deb https://apt.kubernetes.io/ kubernetes-xenial main"
   notify: apt-get update
 - meta: flush_handlers
 - name: install k8s
   apt:
     name:
-      - "kubernetes-cni={{ kubernetes_cni_version }}"
       - "kubeadm={{ k8s_version }}"
       - "kubectl={{ k8s_version }}"
       - "kubelet={{ k8s_version }}"
@@ -45,4 +23,3 @@
     - kubeadm
     - kubectl
     - kubelet
-    - kubernetes-cni
