--- a/roles/k8s-master-up/tasks/main.yaml
+++ b/roles/k8s-master-up/tasks/main.yaml
@@ -14,7 +14,7 @@
   shell: kubectl --kubeconfig=/etc/kubernetes/admin.conf apply --filename=https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 - name: register k8s token
   changed_when: false
-  shell: kubeadm token list | awk 'NR == 2 { print $1 }'
+  shell: kubeadm token create
   register: k8s_token
 - name: save k8s token
   local_action:
