Add initramfs-tools to support mounting the root filesystem via iSCSI.

--- a/roles/debian-up/tasks/main.yaml
+++ b/roles/debian-up/tasks/main.yaml
@@ -41,6 +41,7 @@
       - ca-certificates
       - curl
       - gnupg-agent
+      - initramfs-tools
       - net-tools
       - nfs-common
       - open-iscsi
