--- a/roles/raspberry-pi-hw-up/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-up/tasks/main.yaml
@@ -21,7 +21,7 @@
     backrefs: yes
     line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
     path: '{{ boot_directory }}/{{ item }}'
-    regexp: '^(.*?)(?: cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1)?(.*)$'
+    regexp: '^(.*console=tty1)(?: cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1)?(.*)$'
   notify: reboot system
   with_items:
     - cmdline.txt
