Fix and pin /etc/resolv.conf to use `search` instead of `domain` for the benefit of CoreDNS.

--- a/roles/raspberry-pi-os-down/tasks/main.yaml
+++ b/roles/raspberry-pi-os-down/tasks/main.yaml
@@ -3,3 +3,8 @@
   shell: update-rc.d dphys-swapfile enable && dphys-swapfile setup && dphys-swapfile swapon
   args:
     creates: /var/swap
+- name: make /etc/resolv.conf mutable
+  changed_when: false
+  file:
+    attributes: -i
+    path: /etc/resolv.conf
