--- a/roles/k3s-worker-up/tasks/main.yaml
+++ b/roles/k3s-worker-up/tasks/main.yaml
@@ -21,6 +21,6 @@
     export INSTALL_K3S_VERSION='{{ k3s_version }}'
     export K3S_TOKEN='{{ k3s_token.stdout }}'
     export K3S_URL='{{ k3s_url.stdout }}'
-    curl -fsL https://get.k3s.io | sh -s agent --docker
+    curl --fail --location --silent https://get.k3s.io | sh -s agent
   args:
     creates: /usr/local/bin/k3s-agent-uninstall.sh
