--- a/inventory.yaml
+++ b/inventory.yaml
@@ -63,19 +63,14 @@ all:
         boot_directory: /boot/firmware
   vars:
     ansible_python_interpreter: /usr/bin/python3
+    #container_registry_mirror_url: https://my-container-registry-mirror.local/
     #containerd_version: 1.4.4-1
-    # Do you want to delete local data in k3s, k8s and Docker upon teardown?
+    # Do you want to delete local data in k3s and k8s upon teardown?
     #delete_local_data: no
-    #docker_apt_key_id: 8D81803C0EBFCD88
-    #docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
-    #docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename.lower() }} stable"
-    # Make sure to match the `no_proxy` list or otherwise expect Docker images to be proxied twice:
-    #docker_registry_mirror_url: https://my-docker-registry-mirror.local/
-    #docker_version: "5:20.10.5~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}" # (https://docs.docker.com/install/linux/docker-ce/ubuntu/)
     #k3s_version: v1.19.8+k3s1 # (https://github.com/rancher/k3s/releases)
     #k8s_version: 1.19.8-00 # (https://github.com/kubernetes/kubernetes/releases)
     #locale: C.UTF-8
-    # Make sure to match all nodes and the `docker_registry_mirror_url`:
+    # Make sure to match all nodes:
     #no_proxy: 127.0.0.1,.local,localhost
     # Make sure to use an IP address, not a hostname, or otherwise expect the Kubernetes setup to fail:
     #proxy_url: http://10.0.0.1:3128/
