--- a/roles/k3s-server-down/tasks/main.yaml
+++ b/roles/k3s-server-down/tasks/main.yaml
@@ -3,17 +3,18 @@
   stat:
     path: /usr/local/bin/k3s-uninstall.sh
   register: k3s_server
-- name: apply pre-master-down hooks
-  changed_when: "'created' in pre_master_down.stdout or 'configured' in pre_master_down.stdout"
+- name: apply pre-server-down hooks
+  changed_when: "'created' in pre_server_down.stdout or 'configured' in pre_server_down.stdout"
   local_action:
     module: 'command kubectl --kubeconfig=build/k3s-config.yaml apply --filename=hooks/{{ item }}.yaml'
     removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
-  register: pre_master_down
+  register: pre_server_down
   vars:
     ansible_become: no
   with_items:
     - pre-master-down
     - k3s-pre-master-down
+    - pre-server-down
   when: k3s_server.stat.exists
 - name: drain and delete node
   local_action:
