Remove a bad idea. Use LoadBalander instead of NodePort with K3s.

--- a/roles/k3s-server-up/tasks/main.yaml
+++ b/roles/k3s-server-up/tasks/main.yaml
@@ -13,7 +13,7 @@
 - name: install k3s server
   shell: |
     export INSTALL_K3S_VERSION='{{ k3s_version }}'
-    curl --fail --location --silent https://get.k3s.io | sh -s server --service-node-port-range='{{ serviceNodePortRange }}'
+    curl --fail --location --silent https://get.k3s.io | sh -s server
   args:
     creates: /usr/local/bin/k3s-uninstall.sh
 - name: fetch k3s config
