--- a/up.yaml
+++ b/up.yaml
@@ -13,6 +13,11 @@
     - ubuntu
   roles:
     - debian-up
+- hosts:
+    - k3s_server
+    - k3s_agent
+  roles:
+    - k3s-node-up
 - hosts: k3s_server
   roles:
     - k3s-server-up
