Update firmware and kernel.

--- a/inventory.yaml
+++ b/inventory.yaml
@@ -50,6 +50,15 @@ all:
       vars:
         ansible_ssh_user: pi
         boot_directory: /boot
+    rpi_update:
+      hosts:
+        node-0: { }
+        node-1: { }
+        node-2: { }
+        node-3: { }
+        node-4: { }
+        node-5: { }
+        node-6: { }
     ubuntu:
       hosts: { }
       vars:
