--- a/up.yaml
+++ b/up.yaml
@@ -14,6 +14,10 @@
   roles:
     - debian-up
 - hosts:
+    - rpi_update
+  roles:
+    - rpi-update-up
+- hosts:
     - k3s_server
     - k3s_agent
   roles:
