--- a/roles/raspberry-pi-hw-up/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-up/tasks/main.yaml
@@ -5,7 +5,7 @@
     line: "arm_64bit={{ arm_64bit }}"
     path: '{{ boot_directory }}/config.txt'
     regexp: '^\s*#?\s*arm_64bit\s*='
-  notify: reboot system
+  notify: reboot
   when: arm_64bit is defined
 - name: "#set arm_64bit="
   lineinfile:
@@ -13,7 +13,7 @@
     line: "#arm_64bit="
     path: '{{ boot_directory }}/config.txt'
     regexp: '^\s*#?\s*arm_64bit\s*='
-  notify: reboot system
+  notify: reboot
   when: arm_64bit is not defined
 - name: ensure cgroup kernel params
   failed_when: false
@@ -22,7 +22,7 @@
     line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
     path: '{{ boot_directory }}/{{ item }}'
     regexp: '^(.*console=tty1)(?: cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1)?(.*)$'
-  notify: reboot system
+  notify: reboot
   with_items:
     - cmdline.txt
     - nobtcmd.txt
