--- a/roles/k3s-agent-down/tasks/main.yaml
+++ b/roles/k3s-agent-down/tasks/main.yaml
@@ -4,12 +4,12 @@
     path: /usr/local/bin/k3s-agent-uninstall.sh
   register: k3s_agent
 - name: drain and delete node
-  failed_when: false
+  environment:
+    KUBECONFIG: build/k3s-config.yaml
   local_action:
     module: shell
     _raw_params: |
-      export KUBECONFIG=build/k3s-config.yaml
-      kubectl drain {{ inventory_hostname }} --delete-local-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
+      kubectl drain {{ inventory_hostname }} --delete-emptydir-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
       kubectl delete node {{ inventory_hostname }}
     removes: build/k3s-config.yaml # it doesn't, but it prevents this step from running if it is
   notify: reboot
