--- a/roles/k3s-server-down/tasks/main.yaml
+++ b/roles/k3s-server-down/tasks/main.yaml
@@ -17,11 +17,12 @@
     - pre-server-down
   when: k3s_server.stat.exists
 - name: drain and delete node
+  environment:
+    KUBECONFIG: build/k3s-config.yaml
   local_action:
     module: shell
     _raw_params: |
-      export KUBECONFIG=build/k3s-config.yaml
-      kubectl drain {{ inventory_hostname }} --delete-local-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
+      kubectl drain {{ inventory_hostname }} --delete-emptydir-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
       kubectl delete node {{ inventory_hostname }}
     removes: build/k3s-config.yaml # it doesn't, but it prevents this step from running if it is
   notify: reboot
