Simplify task spec.

--- a/roles/k3s-agent-up/tasks/main.yaml
+++ b/roles/k3s-agent-up/tasks/main.yaml
@@ -17,10 +17,10 @@
   vars:
     ansible_become: no
 - name: install k3s agent
-  shell: |
-    export INSTALL_K3S_VERSION='{{ k3s_version }}'
-    export K3S_TOKEN='{{ k3s_token.stdout }}'
-    export K3S_URL='{{ k3s_url.stdout }}'
-    curl --fail --location --silent https://get.k3s.io | sh -s agent
-  args:
+  environment:
+    INSTALL_K3S_VERSION: '{{ k3s_version }}'
+    K3S_TOKEN: '{{ k3s_token.stdout }}'
+    K3S_URL: '{{ k3s_url.stdout }}'
+  shell:
+    cmd: curl --fail --location --silent https://get.k3s.io | sh -s agent
     creates: /usr/local/bin/k3s-agent-uninstall.sh
