--- a/up.yaml
+++ b/up.yaml
@@ -1,22 +1,26 @@
 ---
-- hosts: raspberry_pi_hw
-  roles:
-    - raspberry-pi-hw-up
-- hosts: raspberry_pi_os
-  roles:
-    - raspberry-pi-os-up
-- hosts: ubuntu
-  roles:
-    - ubuntu-up
+#- hosts: raspberry_pi_hw
+#  roles:
+#    - raspberry-pi-hw-up
+#- hosts: raspberry_pi_os
+#  roles:
+#    - raspberry-pi-os-up
+#- hosts: ubuntu
+#  roles:
+#    - ubuntu-up
+#- hosts:
+#    - raspberry_pi_os
+#    - ubuntu
+#  roles:
+#    - debian-up
+#- hosts:
+#    - rpi_update
+#  roles:
+#    - rpi-update-up
 - hosts:
-    - raspberry_pi_os
-    - ubuntu
+    - openvpn_server
   roles:
-    - debian-up
-- hosts:
-    - rpi_update
-  roles:
-    - rpi-update-up
+    - openvpn-server-up
 - hosts:
     - openvpn_client
   roles:
