--- a/roles/k3s-server-up/defaults/main.yaml
+++ b/roles/k3s-server-up/defaults/main.yaml
@@ -1,4 +1,5 @@
 ---
 ansible_become: yes
 # https://github.com/rancher/k3s/releases :
+k3s_node_ip: '{{ ansible_default_ipv4.address }}'
 k3s_version: v1.21.7+k3s1
