Remove Kolossus from inventory.

--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,34 +1,13 @@
 ---
 all:
-  hosts:
-    node-0:
-      ansible_host: 192.168.71.20
-    node-1:
-      ansible_host: 192.168.71.21
-    node-2:
-      ansible_host: 192.168.71.22
-    node-3:
-      ansible_host: 192.168.71.23
-    node-4:
-      ansible_host: 192.168.71.24
-    node-5:
-      ansible_host: 192.168.71.25
-    node-6:
-      ansible_host: 192.168.71.26
+  hosts: { }
   children:
     k3s_server:
       # At most one server:
-      hosts:
-        node-0: { }
+      hosts: { }
     k3s_agent:
       # None if there is no server, otherwise at least one agent:
-      hosts:
-        node-1: { }
-        node-2: { }
-        node-3: { }
-        node-4: { }
-        node-5: { }
-        node-6: { }
+      hosts: { }
     openvpn_client:
       hosts: { }
       vars:
@@ -37,35 +16,14 @@ all:
       # The fully qualified domain name of the VPN server:
       #openvpn_server_fqdn: my.vpn.server.name
     raspberry_pi_hw:
-      hosts:
-        node-0: { }
-        node-1: { }
-        node-2: { }
-        node-3: { }
-        node-4: { }
-        node-5: { }
-        node-6: { }
+      hosts: { }
     raspberry_pi_os:
-      hosts:
-        node-0: { }
-        node-1: { }
-        node-2: { }
-        node-3: { }
-        node-4: { }
-        node-5: { }
-        node-6: { }
+      hosts: { }
       vars:
         ansible_ssh_user: pi
         #boot_directory: /boot
     rpi_update:
-      hosts:
-        node-0: { }
-        node-1: { }
-        node-2: { }
-        node-3: { }
-        node-4: { }
-        node-5: { }
-        node-6: { }
+      hosts: { }
     ubuntu:
       hosts: { }
       vars:
