--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,29 +1,41 @@
 ---
 all:
   hosts: { }
+    #node-0:
+      #ansible_host: 1.2.3.4
+    #node-1:
+      #ansible_host: 2.3.4.5
   children:
     k3s_server:
       # At most one server:
       hosts: { }
+        #node-0: { }
     k3s_agent:
       # None if there is no server, otherwise at least one agent:
       hosts: { }
+        #node-1: { }
     openvpn_client:
       hosts: { }
       vars:
-      # The path of the pki directory where easy-rsa keeps the certificates and keys for the root CA for the VPN:
-      #openvpn_pki_dir: /my/path/to/easy-rsa
-      # The fully qualified domain name of the VPN server:
-      #openvpn_server_fqdn: my.vpn.server.name
+        # The path of the pki directory where easy-rsa keeps the certificates and keys for the root CA for the VPN:
+        #openvpn_pki_dir: /my/path/to/easy-rsa/pki
+        # The fully qualified domain name of the VPN server:
+        #openvpn_server_fqdn: my.vpn.server.name
     raspberry_pi_hw:
       hosts: { }
+        #node-0: { }
+        #node-1: { }
     raspberry_pi_os:
       hosts: { }
+        #node-0: { }
+        #node-1: { }
       vars:
         ansible_ssh_user: pi
         #boot_directory: /boot
     rpi_update:
       hosts: { }
+        #node-0: { }
+        #node-1: { }
     ubuntu:
       hosts: { }
       vars:
@@ -35,8 +47,6 @@ all:
     #delete_local_data: no
     #k3s_version: v1.21.7+k3s1 # (https://github.com/rancher/k3s/releases)
     #locale: C.UTF-8
-    # Make sure to match all nodes:
     #no_proxy: 127.0.0.1,.local,localhost
-    # Make sure to use an IP address, not a hostname, or otherwise expect the Kubernetes setup to fail:
     #proxy_url: http://10.0.0.1:3128/
     #timezone: UTC
