--- a/roles/k3s-server-down/tasks/main.yaml
+++ b/roles/k3s-server-down/tasks/main.yaml
@@ -3,32 +3,31 @@
   stat:
     path: /usr/local/bin/k3s-uninstall.sh
   register: k3s_server
-- name: apply pre-server-down hooks
-  changed_when: "'created' in pre_server_down.stdout or 'configured' in pre_server_down.stdout"
-  local_action:
-    module: 'command kubectl --kubeconfig=build/k3s-config.yaml apply --filename=hooks/{{ item }}.yaml'
-    removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
-  register: pre_server_down
-  vars:
-    ansible_become: no
-  with_items:
-    - pre-master-down
-    - k3s-pre-master-down
-    - pre-server-down
-  when: k3s_server.stat.exists
-- name: drain and delete node
-  environment:
-    KUBECONFIG: build/k3s-config.yaml
-  local_action:
-    module: shell
-    _raw_params: |
-      kubectl drain {{ inventory_hostname }} --delete-emptydir-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
-      kubectl delete node {{ inventory_hostname }}
-    removes: build/k3s-config.yaml # it doesn't, but it prevents this step from running if it is
-  notify: reboot
-  vars:
-    ansible_become: no
-  when: k3s_server.stat.exists
-- name: uninstall k3s server
-  command: k3s-uninstall.sh
+- block:
+    - name: apply pre-server-down hooks
+      changed_when: "'created' in pre_server_down.stdout or 'configured' in pre_server_down.stdout"
+      local_action:
+        module: 'command kubectl --kubeconfig=build/k3s-config.yaml apply --filename=hooks/{{ item }}.yaml'
+        removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
+      register: pre_server_down
+      vars:
+        ansible_become: no
+      with_items:
+        - pre-master-down
+        - k3s-pre-master-down
+        - pre-server-down
+    - name: drain and delete node
+      environment:
+        KUBECONFIG: build/k3s-config.yaml
+      local_action:
+        module: shell
+        _raw_params: |
+          kubectl drain {{ inventory_hostname }} --delete-emptydir-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
+          kubectl delete node {{ inventory_hostname }}
+        removes: build/k3s-config.yaml # it doesn't, but it prevents this step from running if it is
+      notify: reboot
+      vars:
+        ansible_become: no
+    - name: uninstall k3s server
+      command: k3s-uninstall.sh
   when: k3s_server.stat.exists
