--- a/inventory.yaml
+++ b/inventory.yaml
@@ -43,4 +43,6 @@ all:
     #locale: C.UTF-8
     #no_proxy: 127.0.0.1,.local,localhost
     #proxy_url: http://10.0.0.1:3128/
+    # Should pods for your workloads be scheduled on K3s servers?
+    #k3s_server_schedule_pods: yes
     #timezone: UTC
