--- a/inventory.yaml
+++ b/inventory.yaml
@@ -39,6 +39,8 @@ all:
     #container_registry_mirror_url: https://my-container-registry-mirror.local/
     # Do you want to delete local data in the Kubernetes cluster upon teardown?
     #delete_local_data: no
+    # API Token for cloning repos from GitHub:
+    #github_api_token: ""
     #k3s_version: v1.22.4+k3s1 # (https://github.com/rancher/k3s/releases)
     #locale: C.UTF-8
     #no_proxy: 127.0.0.1,.local,localhost
