--- a/inventory.yaml
+++ b/inventory.yaml
@@ -32,6 +32,8 @@ all:
         #rpi_update: true
     ubuntu:
       hosts: { }
+        #node-0: { }
+        #node-1: { }
       vars:
         ansible_ssh_user: ubuntu
   vars:
