--- a/roles/k3s-server-up/defaults/main.yaml
+++ b/roles/k3s-server-up/defaults/main.yaml
@@ -1,6 +1,7 @@
 ---
 ansible_become: yes
 # https://github.com/rancher/k3s/releases :
+k3s_flannel_backend: vxlan
 k3s_node_ip: '{{ ansible_default_ipv4.address }}'
 k3s_server_schedule_pods: yes
 k3s_version: v1.22.4+k3s1
